tests/ui/cycle-trait/cycle-trait-supertrait-direct.stderr
error[E0391]: cycle detected when computing the super predicates of `Chromosome`
  --> $DIR/cycle-trait-supertrait-direct.rs:3:19
   |
LL | trait Chromosome: Chromosome {
   |                   ^^^^^^^^^^
   |
   = note: ...which immediately requires computing the super predicates of `Chromosome` again
note: cycle used when checking that `Chromosome` is well-formed
  --> $DIR/cycle-trait-supertrait-direct.rs:3:1
   |
LL | trait Chromosome: Chromosome {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
