tests/ui/cycle-trait/cycle-trait-supertrait-direct.rs
// Test a supertrait cycle where a trait extends itself.

trait Chromosome: Chromosome {
    //~^ ERROR cycle detected
}

fn main() { }
